Revision history for DBIx-Class-Fixtures

- Fix t/var/configs/*.json to use valid JSON syntax

1.001002
- Allow passing schema object to ->populate
- Check that fixture population dir was created

1.001001
- debug defaults to 0 rather than undef
- cleanup only deletes what's necessary
- added db specific dbi files so that postgres can use deferrable

1.001000
- Added includes functionality
- Added post_ddl and cascade attributes to populate (Drew Taylor)
- Scalar refs in cond clauses handled in sets as well as fetches (Sebastian Willert)
- Directory separators in primary keys do not cause a crash (Sebastian Willert)
- Optimised populate to take advantage of insert_bulk (Drew Taylor)

1.000001
- Added missing deps

1.000000
- Released
