@@ -8,7 +8,6 @@ requires 'DBIx::Class' => 0.08102;
 requires 'Data::Visitor' => 0.15;
 requires 'File::Copy::Recursive' => 0.35;
 requires 'DateTime' => 0.41;
-requires 'DateTime::Format::MySQL' => 0.04;
 requires 'DBIx::Class::Schema::Loader' => 0.04006;
 requires 'Class::Accessor::Grouped' => 0.06;
 requires 'Path::Class' => 0.16;
@@ -16,6 +15,10 @@ requires 'Config::Any' => 0.08;
 requires 'JSON::Syck' => 0.26;
 requires 'Data::Dump::Streamer' => 2.05;
 requires 'Hash::Merge' => 0.10;
+
+requires 'DateTime::Format::SQLite' => 0.10;
+requires 'DateTime::Format::MySQL' => 0;
+requires 'DateTime::Format::Pg' => 0;
 
 build_requires 'Test::More'       => 0.7;
 
